--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
+
+# Service PORT
+port=80
+
 # Bot Framework Variables
 MICROSOFT_APP_ID=6230cedb-ee8d-4b3e-9f75-97e63f44741c
 MICROSOFT_APP_PASSWORD=gnkscSEYB8837*-_!lnAPY9
