new bot account

--- a/.env
+++ b/.env
@@ -3,8 +3,11 @@
 port=80
 
 # Bot Framework Variables
-MICROSOFT_APP_ID=6230cedb-ee8d-4b3e-9f75-97e63f44741c
-MICROSOFT_APP_PASSWORD=gnkscSEYB8837*-_!lnAPY9
+#MICROSOFT_APP_ID=6230cedb-ee8d-4b3e-9f75-97e63f44741c
+#MICROSOFT_APP_PASSWORD=gnkscSEYB8837*-_!lnAPY9
+MICROSOFT_APP_ID=0e578516-92bf-49be-af92-ccc8a95b3cad
+MICROSOFT_APP_PASSWORD=srlGTOT34(swvjKUX398_=^
+
 
 # This Url can be obtained by uploading or creating your model from the LUIS portal: https://www.luis.ai/
 LUIS_MODEL_URL=https://westus.api.cognitive.microsoft.com/luis/v2.0/apps/c6773c5b-4c15-494f-ae24-3f830e15369b?subscription-key=883c85d1f7034db9ac4aaf1c9226c881&verbose=true&timezoneOffset=0&q=
