--- a/.env
+++ b/.env
@@ -3,10 +3,10 @@
 # port=80
 
 # Bot Framework Variables
-#MICROSOFT_APP_ID=6230cedb-ee8d-4b3e-9f75-97e63f44741c
-#MICROSOFT_APP_PASSWORD=gnkscSEYB8837*-_!lnAPY9
-MICROSOFT_APP_ID=0e578516-92bf-49be-af92-ccc8a95b3cad
-MICROSOFT_APP_PASSWORD=srlGTOT34(swvjKUX398_=^
+MICROSOFT_APP_ID=6230cedb-ee8d-4b3e-9f75-97e63f44741c
+MICROSOFT_APP_PASSWORD=gnkscSEYB8837*-_!lnAPY9
+#MICROSOFT_APP_ID=0e578516-92bf-49be-af92-ccc8a95b3cad
+#MICROSOFT_APP_PASSWORD=srlGTOT34(swvjKUX398_=^
 
 
 # This Url can be obtained by uploading or creating your model from the LUIS portal: https://www.luis.ai/
