--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv-extended": "^1.0.4",
     "log4js": "^2.5.3",
     "node-env-file": "^0.1.8",
+    "node-uuid": "^1.4.8",
     "request": "^2.83.0",
     "require-load": "^2.2.0",
     "restify": "^4.3.2",
