--- a/core/package.json
+++ b/core/package.json
@@ -23,6 +23,7 @@
     "base64url": "^2.0.0",
     "chrono-node": "^1.1.3",
     "jsonwebtoken": "^7.0.1",
+    "needle": "^2.1.2",
     "promise": "^7.1.1",
     "request": "^2.69.0",
     "rsa-pem-from-mod-exp": "^0.8.4",
