--- a/.env
+++ b/.env
@@ -21,12 +21,18 @@ BING_SPELL_CHECK_API_KEY=
 BING_SPELL_CHECK_API_ENDPOINT=https://api.cognitive.microsoft.com/bing/v7.0/spellcheck
 
 
+# 3rd Party Server Information(Calendar Website)
+THIRD_PARTY_SERVER_CALENDAR_WEB_URL=https://hmns-3rdparty.azurewebsites.net/calendar
+THIRD_PARTY_SERVER_CALENDAR_WEB_INSERT_URL=https://hmns-3rdparty.azurewebsites.net/calendar/input
+
 # 3rd Party Server Information(Calendar)
-THIRD_PARTY_SERVER_CALENDAR_IP=127.0.0.1
-THIRD_PARTY_SERVER_CALENDAR_PORT=80
-THIRD_PARTY_SERVER_CALENDAR_URI=/calendar/chaehoon/test 
+THIRD_PARTY_SERVER_CALENDAR_URL=https://integrated-web.azurewebsites.net
+THIRD_PARTY_SERVER_CALENDAR_URI=/schedule
 
 # 3rd Party Server Information(Route)
-THIRD_PARTY_SERVER_ROUTE_IP=127.0.0.1
-THIRD_PARTY_SERVER_ROUTE_PORT=80
-THIRD_PARTY_SERVER_ROUTE_URI=/calendar/chaehoon/test 
+THIRD_PARTY_SERVER_ROUTE_URL=https://integrated-web.azurewebsites.net
+THIRD_PARTY_SERVER_ROUTE_URI=/route
+
+# 3rd Party Server Information(Resesvation)
+THIRD_PARTY_SERVER_RESERVATION_URL=https://integrated-web.azurewebsites.net
+THIRD_PARTY_SERVER_RESERVATION_URI=/reservation
