--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^5.0.0",
     "dotenv-extended": "^1.0.4",
     "log4js": "^2.5.3",
+    "moment": "^2.20.1",
     "needle": "^1.6.0",
     "node-env-file": "^0.1.8",
     "node-uuid": "^1.4.8",
