--- a/.env
+++ b/.env
@@ -5,8 +5,11 @@
 # Bot Framework Variables
 #MICROSOFT_APP_ID=6230cedb-ee8d-4b3e-9f75-97e63f44741c
 #MICROSOFT_APP_PASSWORD=gnkscSEYB8837*-_!lnAPY9
-MICROSOFT_APP_ID=0e578516-92bf-49be-af92-ccc8a95b3cad
-MICROSOFT_APP_PASSWORD=srlGTOT34(swvjKUX398_=^
+#MICROSOFT_APP_ID=0e578516-92bf-49be-af92-ccc8a95b3cad
+#MICROSOFT_APP_PASSWORD=srlGTOT34(swvjKUX398_=^
+MICROSOFT_APP_ID=8a64d36c-f159-4f08-8d29-5214f5d5c708
+MICROSOFT_APP_PASSWORD=nxjjrE01]{}dhARVNUX233{
+
 MICROSOFT_SPEECH_API_KEY=837f3dce9b0a4b48a86d7611346fb771
 
 # This Url can be obtained by uploading or creating your model from the LUIS portal: https://www.luis.ai/
