--- a/.env
+++ b/.env
@@ -7,8 +7,8 @@
 #MICROSOFT_APP_PASSWORD=gnkscSEYB8837*-_!lnAPY9
 #MICROSOFT_APP_ID=0e578516-92bf-49be-af92-ccc8a95b3cad
 #MICROSOFT_APP_PASSWORD=srlGTOT34(swvjKUX398_=^
-MICROSOFT_APP_ID=8a64d36c-f159-4f08-8d29-5214f5d5c708
-MICROSOFT_APP_PASSWORD=nxjjrE01]{}dhARVNUX233{
+MICROSOFT_APP_ID=34b1e367-14e6-428f-ac0e-51e8c8eb544d
+MICROSOFT_APP_PASSWORD=zwpUEJED775;=@*eymmSF20
 
 MICROSOFT_SPEECH_API_KEY=837f3dce9b0a4b48a86d7611346fb771
 
