--- a/.env
+++ b/.env
@@ -26,21 +26,31 @@ THIRD_PARTY_SERVER_CALENDAR_WEB_URL=https://hmns-3rdparty.azurewebsites.net/cale
 THIRD_PARTY_SERVER_CALENDAR_WEB_INSERT_URL=https://hmns-3rdparty.azurewebsites.net/calendar/input
 
 # 3rd Party Server Information(Calendar)
-#THIRD_PARTY_SERVER_CALENDAR_URL=https://integrated-web.azurewebsites.net
-THIRD_PARTY_SERVER_CALENDAR_URL=http://127.0.0.1:8081
+THIRD_PARTY_SERVER_CALENDAR_URL=https://integrated-web.azurewebsites.net
+#THIRD_PARTY_SERVER_CALENDAR_URL=http://127.0.0.1:8081
 THIRD_PARTY_SERVER_CALENDAR_URI=/schedule
 
 # 3rd Party Server Information(Route)
-#THIRD_PARTY_SERVER_ROUTE_URL=https://integrated-web.azurewebsites.net
-THIRD_PARTY_SERVER_ROUTE_URL=http://127.0.0.1:8081
+THIRD_PARTY_SERVER_ROUTE_URL=https://integrated-web.azurewebsites.net
+#THIRD_PARTY_SERVER_ROUTE_URL=http://127.0.0.1:8081
 THIRD_PARTY_SERVER_ROUTE_URI=/route
 
 # 3rd Party Server Information(Resesvation)
-#THIRD_PARTY_SERVER_RESERVATION_URL=https://integrated-web.azurewebsites.net
-THIRD_PARTY_SERVER_RESERVATION_URL=http://127.0.0.1:8081
+THIRD_PARTY_SERVER_RESERVATION_URL=https://integrated-web.azurewebsites.net
+#THIRD_PARTY_SERVER_RESERVATION_URL=http://127.0.0.1:8081
 THIRD_PARTY_SERVER_RESERVATION_URI=/reservation
 
 # 3rd Party Server Information(Weather)
-#THIRD_PARTY_SERVER_WEATHER_URL=https://integrated-web.azurewebsites.net
-THIRD_PARTY_SERVER_WEATHER_URL=http://127.0.0.1:8081
+THIRD_PARTY_SERVER_WEATHER_URL=https://integrated-web.azurewebsites.net
+#THIRD_PARTY_SERVER_WEATHER_URL=http://127.0.0.1:8081
 THIRD_PARTY_SERVER_WEATHER_URI=/weather
+
+# 3rd Party Server Information(LUIS)
+#THIRD_PARTY_SERVER_LUIS_URL=https://integrated-web.azurewebsites.net
+THIRD_PARTY_SERVER_LUIS_URL=http://127.0.0.1:8081
+THIRD_PARTY_SERVER_LUIS_URI=/luis
+
+# 3rd Party Server Information(Speech To Text)
+#THIRD_PARTY_SERVER_STT_URL=https://integrated-web.azurewebsites.net
+THIRD_PARTY_SERVER_STT_URL=http://127.0.0.1:8081
+THIRD_PARTY_SERVER_STT_URI=/stt
