--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@
 # Bot Framework Variables
 #MICROSOFT_APP_ID=6230cedb-ee8d-4b3e-9f75-97e63f44741c
 #MICROSOFT_APP_PASSWORD=gnkscSEYB8837*-_!lnAPY9
-MICROSOFT_APP_ID=0e578516-92bf-49be-af92-ccc8a95b3cad
-MICROSOFT_APP_PASSWORD=srlGTOT34(swvjKUX398_=^
+MICROSOFT_APP_ID=34b1e367-14e6-428f-ac0e-51e8c8eb544d
+MICROSOFT_APP_PASSWORD=zwpUEJED775;=@*eymmSF20
 MICROSOFT_SPEECH_API_KEY=837f3dce9b0a4b48a86d7611346fb771
 
 # This Url can be obtained by uploading or creating your model from the LUIS portal: https://www.luis.ai/
@@ -26,8 +26,8 @@ THIRD_PARTY_SERVER_CALENDAR_WEB_URL=https://hmns-3rdparty.azurewebsites.net/cale
 THIRD_PARTY_SERVER_CALENDAR_WEB_INSERT_URL=https://hmns-3rdparty.azurewebsites.net/calendar/input
 
 
-THIRD_PARTY_SERVER_URL=https://integrated-web.azurewebsites.net
-#THIRD_PARTY_SERVER_URL=http://127.0.0.1:8081
+#THIRD_PARTY_SERVER_URL=https://integrated-web.azurewebsites.net
+THIRD_PARTY_SERVER_URL=http://127.0.0.1:8081
 
 
 # 3rd Party Server Information(Calendar)
