modify environment file

--- a/.env
+++ b/.env
@@ -25,25 +25,25 @@ BING_SPELL_CHECK_API_ENDPOINT=https://api.cognitive.microsoft.com/bing/v7.0/spel
 THIRD_PARTY_SERVER_CALENDAR_WEB_URL=https://hmns-3rdparty.azurewebsites.net/calendar
 THIRD_PARTY_SERVER_CALENDAR_WEB_INSERT_URL=https://hmns-3rdparty.azurewebsites.net/calendar/input
 
+# Integrated Web Interface Server Information
+THIRD_PARTY_SERVER_URL=https://integrated-web.azurewebsites.net
+#THIRD_PARTY_SERVER_URL=http://127.0.0.1:8081
 
-#THIRD_PARTY_SERVER_URL=https://integrated-web.azurewebsites.net
-THIRD_PARTY_SERVER_URL=http://127.0.0.1:8081
 
-
-# 3rd Party Server Information(Calendar)
+# Integrated Web Interface Information(Calendar)
 THIRD_PARTY_SERVER_CALENDAR_URI=/schedule
 
-# 3rd Party Server Information(Route)
+# Integrated Web Interface Information(Route)
 THIRD_PARTY_SERVER_ROUTE_URI=/route
 
-# 3rd Party Server Information(Resesvation)
+# Integrated Web Interface Information(Resesvation)
 THIRD_PARTY_SERVER_RESERVATION_URI=/reservation
 
-# 3rd Party Server Information(Weather)
+# Integrated Web Interface Information(Weather)
 THIRD_PARTY_SERVER_WEATHER_URI=/weather
 
-# 3rd Party Server Information(LUIS)
+# Integrated Web Interface Information(LUIS)
 THIRD_PARTY_SERVER_LUIS_URI=/luis
 
-# 3rd Party Server Information(Speech To Text)
+# Integrated Web Interface Information(Speech To Text)
 THIRD_PARTY_SERVER_STT_URI=/stt
