--- a/.env
+++ b/.env
@@ -20,6 +20,8 @@ IS_SPELL_CORRECTION_ENABLED=false
 BING_SPELL_CHECK_API_KEY=
 BING_SPELL_CHECK_API_ENDPOINT=https://api.cognitive.microsoft.com/bing/v7.0/spellcheck
 
+BING_SEARCH_API_KEY=1fdec87ff94641289ed054d993371ad9
+
 
 # 3rd Party Server Information(Calendar Website)
 THIRD_PARTY_SERVER_CALENDAR_WEB_URL=https://hmns-3rdparty.azurewebsites.net/calendar
