--- a/.env
+++ b/.env
@@ -3,10 +3,8 @@
 # port=80
 
 # Bot Framework Variables
-#MICROSOFT_APP_ID=6230cedb-ee8d-4b3e-9f75-97e63f44741c
-#MICROSOFT_APP_PASSWORD=gnkscSEYB8837*-_!lnAPY9
-MICROSOFT_APP_ID=34b1e367-14e6-428f-ac0e-51e8c8eb544d
-MICROSOFT_APP_PASSWORD=zwpUEJED775;=@*eymmSF20
+MICROSOFT_APP_ID=833872ec-773f-417c-a9e7-db8cbd31b782
+MICROSOFT_APP_PASSWORD=rdZCO00~(%:ftqakHRRK242
 MICROSOFT_SPEECH_API_KEY=837f3dce9b0a4b48a86d7611346fb771
 
 # This Url can be obtained by uploading or creating your model from the LUIS portal: https://www.luis.ai/
