--- a/.env
+++ b/.env
@@ -11,8 +11,8 @@
 #   Azure Bot-Framework Information                                                                 #
 #                                                                                                   #
 #####################################################################################################
-MICROSOFT_APP_ID=833872ec-773f-417c-a9e7-db8cbd31b782
-MICROSOFT_APP_PASSWORD=rdZCO00~(%:ftqakHRRK242
+MICROSOFT_APP_ID=1174c2dd-a2a7-4c67-807a-dc0fb08ad65c
+MICROSOFT_APP_PASSWORD=ROY85582$}wfsbilbSUUQ-;
 MICROSOFT_SPEECH_API_KEY=837f3dce9b0a4b48a86d7611346fb771
 
 #####################################################################################################
