--- a/.env
+++ b/.env
@@ -5,14 +5,14 @@
 #####################################################################################################
 # Service PORT
 # port=80
-
+HMNS_BOT_VERSION=1.0
 #####################################################################################################
 #                                                                                                   #
 #   Azure Bot-Framework Information                                                                 #
 #                                                                                                   #
 #####################################################################################################
 MICROSOFT_APP_ID=1174c2dd-a2a7-4c67-807a-dc0fb08ad65c
-MICROSOFT_APP_PASSWORD=ROY85582$}wfsbilbSUUQ-;
+MICROSOFT_APP_PASSWORD=casEWBX48$|vcqkXOQ963?]
 MICROSOFT_SPEECH_API_KEY=837f3dce9b0a4b48a86d7611346fb771
 
 #####################################################################################################
